--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
      <meta charset="UTF-8">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <title>PICO || Personal Portfolio</title>
+     <title>Prashant Kumar || Personal Portfolio</title>
      
       <!--=====FAB ICON=======-->
       <link rel="shortcut icon" href="assets/img/logo/logo1.png" type="image/x-icon">
@@ -102,7 +102,7 @@
               <i class="fa-solid fa-phone-volume"></i>
             </div>
             <div class="contact-info-text">
-              <a href="tel:+3(924)4596512">+3(924)4596512</a>
+              <a href="tel:+919471907240">+919471907240</a>
             </div>
           </div>
           <div class="contact-info-single">
@@ -110,7 +110,7 @@
               <i class="fa-solid fa-envelope"></i>
             </div>
             <div class="contact-info-text">
-              <a href="mailto:info@example.com">info@example.com</a>
+              <a href="mailto:prashantkumar171@gmail.com">prashantkumar171@gmail.com</a>
             </div>
           </div>
           <div class="space20"></div>
@@ -121,7 +121,7 @@
                 <i class="fa-solid fa-location-dot"></i>
               </div>
               <div class="contact-info-text">
-                <a href="mailto:info@example.com" >55 East Birchwood Ave.Brooklyn, <br> New York 11201,United States</a>
+                <a href="mailto:prashantkumar171@gmail.com" >Vill.+PO- Kolhua Paighamberpur, <br> Bihar, India 843108</a>
               </div>
             </div>
           </div>
@@ -201,9 +201,9 @@
                   <div id="home">
                     <div class="header-textarea">
                     <div class="pbmit-heading-subheading">
-                      <h4 class="text-anime-style-3"><img src="assets/img/icons/hand1.svg" alt="">Hi I’m Jos Butler</h4>
-                      <h1 class="text-anime-style-3">A graphic <span class="designer">Designer &</span></h1>
-                      <span class="marketer">digital marketer
+                      <h4 class="text-anime-style-3"><img src="assets/img/icons/hand1.svg" alt="">Hi I’m Prashant Kumar</h4>
+                      <h1 class="text-anime-style-3">A Security <span class="designer">Researcher &</span></h1>
+                      <span class="marketer">Security Analyst
                         <img src="assets/img/elements/elements1.png" alt="" class="elements1" data-aos="fade-left" data-aos-duration="800">
                         <img src="assets/img/elements/elements1.png" alt="" class="elements2" data-aos="fade-right" data-aos-duration="1000">
                         <img src="assets/img/elements/elements1.png" alt="" class="elements3" data-aos="fade-left" data-aos-duration="1100">
@@ -872,7 +872,7 @@
                                         </div>
                                         <div class="content">
                                           <h5>CALL</h5>
-                                          <a href="tel:281-789-6642">281-789-6642</a>
+                                          <a href="tel:+919471907240">+919471907240</a>
                                         </div>
                                       </div>
             
@@ -882,7 +882,7 @@
                                         </div>
                                         <div class="content">
                                           <h5>Email</h5>
-                                          <a href="mailto:">info@Aslicecode.com</a>
+                                          <a href="mailto:prashantkumar171@gmail.com">prashantkumar171@gmail.com</a>
                                         </div>
                                       </div>
                                     </div>
